--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
   <link rel="stylesheet" href="css/nicepage.css" media="screen">
   <link rel="stylesheet" href="css/Home.css" media="screen">
   <script class="u-script" type="text/javascript" src="javascript/jquery.js" "="" defer=""></script>
-    <script class=" u-script" type="text/javascript" src="javascript/nicepage.js" "="" defer=""></script>
-    <script class=" u-script" type="text/javascript" src="javascript/constants.js" defer=""></script>
+  <script class="u-script" type="text/javascript" src="javascript/header.js" defer=""></script>
+  <script class=" u-script" type="text/javascript" src="javascript/nicepage.js" "="" defer=""></script>
+  <script class=" u-script" type="text/javascript" src="javascript/constants.js" defer=""></script>
   <script class="u-script" type="text/javascript" src="javascript/index.js" defer=""></script>
   <meta name=" generator" content="Nicepage 4.16.0, nicepage.com">
   <link id="u-theme-google-font" rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
   <link id="u-page-google-font" rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,200i,300,300i,400,400i,600,600i,700,700i,900,900i">
-
 
   <script type="application/ld+json">{
 		"@context": "http://schema.org",
@@ -34,113 +34,12 @@
 
 <body data-home-page="index.html" data-home-page-title="Home" class="u-body u-overlap u-xl-mode" data-lang="en">
   <header class="u-clearfix u-header u-sticky u-header" id="sec-3764">
-    <div class="u-clearfix u-sheet u-sheet-1">
+    <div class="u-clearfix u-sheet u-sheet-1" id="header-sec">
       <a href="index.html" data-page-id="981706589" class="u-image u-logo u-image-1" data-image-width="1000"
         data-image-height="265" title="Home">
         <img src="images/logo-no-background.png" class="u-logo-image u-logo-image-1">
       </a>
-      <nav class="u-menu u-menu-dropdown u-offcanvas u-offcanvas-shift u-menu-1" data-responsive-from="MD">
-        <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px; font-weight: 700;">
-          <a class="u-button-style u-custom-active-color u-custom-border u-custom-border-color u-custom-borders u-custom-hover-color u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-text-active-color u-custom-text-color u-custom-text-hover-color u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base"
-            href="#">
-            <svg class="u-svg-link" viewBox="0 0 24 24">
-              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu-hamburger"></use>
-            </svg>
-            <svg class="u-svg-content" version="1.1" id="menu-hamburger" viewBox="0 0 16 16" x="0px" y="0px"
-              xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg">
-              <g>
-                <rect y="1" width="16" height="2"></rect>
-                <rect y="7" width="16" height="2"></rect>
-                <rect y="13" width="16" height="2"></rect>
-              </g>
-            </svg>
-          </a>
-        </div>
-        <div class="u-nav-container">
-          <ul class="u-custom-font u-heading-font u-nav u-spacing-20 u-unstyled u-nav-1">
-            <li class="u-nav-item"><a
-                class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
-                href="index.html" style="padding: 10px;">Home</a>
-            </li>
-            <li class="u-nav-item"><a
-                class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
-                style="padding: 10px;color: black !important;">Strategies 🠻</a>
-              <div class="u-nav-popup">
-                <ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10">
-                  <li class="u-nav-item"><a
-                      class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
-                      href="Only-Draws.html" style="padding: 10px;">Only Draws</a>
-                  </li>
-                  <li class="u-nav-item"><a
-                      class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
-                      href="Margin-Wins.html" style="padding: 10px;">Margin Wins</a>
-                  </li>
-                  <li class="u-nav-item"><a
-                      class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
-                      href="Draws-Hunter.html" style="padding: 10px;">Draws Hunter</a>
-                  </li>
-                  <li class="u-nav-item"><a
-                      class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
-                      href="25GoalLines.html" style="padding: 10px;">2,5 Goal Lines</a>
-                  </li>
-                  <li class="u-nav-item"><a
-                    class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
-                    href="Goals-Fest.html" style="padding: 10px;">Goals Fest</a>
-                </li>
-                </ul>
-              </div>
-            </li>
-            <li class="u-nav-item"><a
-                class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
-                href="Bankrolls.html" style="padding: 10px;">Bankrolls</a>
-            </li>
-            <li class="u-nav-item"><a
-                class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
-                href="HistoricStatsData.html" style="padding: 10px;">Historic Stats</a>
-            </li>
-          </ul>
-        </div>
-        <div class="u-nav-container-collapse">
-          <div class="u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
-            <div class="u-inner-container-layout u-sidenav-overflow">
-              <div class="u-menu-close"></div>
-              <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2">
-                <li class="u-nav-item"><a class="u-button-style u-nav-link" href="index.html"
-                    style="padding: 10px 20px;">Home</a>
-                </li>
-                <li class="u-nav-item"><a class="u-button-style u-nav-link">Strategies 🠻</a>
-                  <div class="u-nav-popup">
-                    <ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10">
-                      <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Only-Draws.html"
-                          style="padding: 10px 20px;">Only Draws</a>
-                      </li>
-                      <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Margin-Wins.html"
-                          style="padding: 10px 20px;">Margin Wins</a>
-                      </li>
-                      <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Draws-Hunter.html"
-                          style="padding: 10px 20px;">Draws Hunter</a>
-                      </li>
-                      <li class="u-nav-item"><a class="u-button-style u-nav-link" href="25GoalLines.html"
-                          style="padding: 10px 20px;">2,5 Goal Lines</a>
-                      </li>
-                      <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Goals-Fest.html"
-                        style="padding: 10px 20px;">Goals Fest</a>
-                    </li>
-                    </ul>
-                  </div>
-                </li>
-                <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Bankrolls.html"
-                    style="padding: 10px 20px;">Bankrolls</a>
-                </li>
-                <li class="u-nav-item"><a class="u-button-style u-nav-link" href="HistoricStatsData.html"
-                    style="padding: 10px 20px;">Historic Stats</a>
-                </li>
-              </ul>
-            </div>
-          </div>
-          <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
-        </div>
-      </nav>
+      
     </div>
     <style class="u-sticky-style" data-style-id="ede6">
       .u-sticky-fixed.u-sticky-ede6:before,
