add new long streaks: no win both halves ; no win && +2.5 goals

--- a/LongStreaks.html
+++ b/LongStreaks.html
@@ -221,6 +221,22 @@
             <input type="submit" value="submit" class="u-form-control-hidden">
           </div>
         </li>
+        <li style="display: inline-block; margin-right: 10px;">
+          <div class="u-align-center u-form-group u-form-submit">
+            <a onclick="changeHeadCell('No Win Both Halves')"
+              class="u-border-none u-btn u-btn-round u-btn-submit u-button-style u-custom-font u-font-source-sans-pro u-palette-3-dark-2 u-radius-18 u-btn-1">No
+              Win Both Halves</a>
+            <input type="submit" value="submit" class="u-form-control-hidden">
+          </div>
+        </li>
+        <li style="display: inline-block; margin-right: 10px;">
+          <div class="u-align-center u-form-group u-form-submit">
+            <a onclick="changeHeadCell('No Win && +2.5 Goals')"
+              class="u-border-none u-btn u-btn-round u-btn-submit u-button-style u-custom-font u-font-source-sans-pro u-palette-3-dark-2 u-radius-18 u-btn-1">No
+              Win && +2.5 Goals</a>
+            <input type="submit" value="submit" class="u-form-control-hidden">
+          </div>
+        </li>
         <!-- <li style="display: inline-block; margin-right: 10px;"> <div class="u-align-center u-form-group u-form-submit">
               <a onclick="changeHeadCell('-1.5 Goals 1st Half')"
                 class="u-border-none u-btn u-btn-round u-btn-submit u-button-style u-custom-font u-font-source-sans-pro u-palette-3-dark-2 u-radius-18 u-btn-1">-1.5 Goals 1st Half</a>
